v3.2.2:
  - Hotfix: the protocol visualization on the left panel was fixed.
  - Call the tlt file generation method considering the excluded views.
v3.2.1:
  - Installation requirements better managed.
  - Fix: Relion output now copies the acquisition.
  - Fix: The sampling rate displayed for the initial volume was incorrect.
  - Fix: FSC object stored unused data for the FSC viewer. That data was removed.
  - Tests updated.
v3.2.0:
  - Wizard to apply operation in relion particles
  - 3D Classification defines its possible outputs
  - An initio fixed (not using optimization set)
  - Other FSCs are plotted in the refine and postprocess protocols
v3.1.6:
  - 3D Classification more completed/standard
  - 3D classes can be fed to mapback or others
  - Refine and 3D classification use and register optimisation_set.star files

v3.1.5:
  - Prepare more robust and optimized to subsets of coordinates and Tilt series. Still ctf could be added to the ecuation.

v3.1.4:
  - GroupId is not lost through reliontomo processing
  - Fix shifts conversion in subsets: Scipion-Relion and viceversa
  - Export pseudo to coordinates removed completely
  - Apply operation works on non extracted pseudo subtomograms
  - Dataviewer shows Pseudosubtomograms better.
  - Import coordinates from star: fix scheduling (indirect pointer to precedents)
  - Prepare data:
      Fix scheduling (indirect pointer to ts from fiducials)
      Shifts in z and x are now taken from tomogram origin and into imod files
      Tilt series input is now mandatory until we manage to get the right one though the other inputs.
  - Fix refine: uses now the latest star file and priors are produced without a subset

v3.1.3:
  - Fix: Use one of the halves map in auto-refine if it exists
  - Fix: LandMark model generation in prepare when a join coordinates has happened. Sorting issue.
  - Reconstruct does not generate PseudoSubtomograms.
  - Option to "consider angles as priors" in refine and 3d classification