@@ -1,6 +1,10 @@
 v3.2.2:
+ Users:
   - Hotfix: the protocol visualization on the left panel was fixed.
   - Call the tlt file generation method considering the excluded views.
+ Developers:
+  - Fix: the coordinates generated in the convert input step of the prepare data protocol are now float instead of
+    integer.
 v3.2.1:
   - Installation requirements better managed.
   - Fix: Relion output now copies the acquisition.
